# GoalCast

./: .gitignore  .pre-commit-config.yaml  DEV_ENV_SETUP.md  PROJECT_SETUP_SUMMARY.md  README.md  project-spec.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  epic.yml  feature-request.yml  user-story.yml
.github/workflows/: ci.yml
agentic-framework/: CONTRIBUTING.md  master-agent.md
agentic-framework/scripts/: cli.py
agentic-framework/standards/: __init__.py  ai-tool-integration.md  architectural-principles.md  autonomous-cognitive-triggers.md  coding_styleguide.md  data_pipeline_patterns.md  testing_strategy.md
agentic-framework/sub-agents/: ML-engineer-agent.md  QA-engineer-agent.md  UX-research-agent.md  __init__.py  azure-principal-architect-agent.md  beast-mode-executor-agent.md  blueprint-executor-agent.md  business-analyst-agent.md  cloud-engineer-agent.md  critical-analyst-agent.md  data-engineer-agent.md  data-scientist-agent.md  database-engineer-agent.md  devops-engineer-agent.md  expert-dotnet-software-engineer-agent.md  expert-react-frontend-engineer-agent.md  networks-engineer-agent.md  principal-engineer-agent.md  product-owner-agent.md  project-manager-agent.md  quantum-thinking-framework-agent.md  research-specialist-agent.md  scrum-master-agent.md  security-expert-agent.md  site-reliability-engineer-agent.md  task-planner-agent.md  technical-writer-agent.md  test-automation-expert-agent.md  test-manager-agent.md  ui-designer-agent.md
agentic-framework/templates/: __init__.py  framework-management-guide.md  project-brief-template.md  quality-gates.md  workflow-state-management.md
docs/: BRANCHING_STRATEGY.md  DEV_ENV_SETUP.md  GoalCast_Tooling_Review.pptx  PROJECT_SETUP_SUMMARY.md  WORKFLOW.md  WORKFLOW_SETUP_COMPLETE.md
src/goalcast/: __init__.py  cli.py
src/goalcast/api/: __init__.py
src/goalcast/data/: __init__.py
src/goalcast/llm/: __init__.py
src/goalcast/models/: __init__.py
src/goalcast/simulation/: __init__.py
src/goalcast/ui/: __init__.py
src/goalcast/utils/: __init__.py
tests/: conftest.py  test_init.py
tools/: generate_presentation.py
